--- a/extra-test/src/main/resources/extra.properties
+++ b/extra-test/src/main/resources/extra.properties
@@ -6,3 +6,7 @@ cache.expire=1800000
 
 # default is com.kangyonggan.extra.core.handle.MemoryCacheHandle
 cache.handle=com.kangyonggan.extra.test.RedisCacheHandle
+
+# default is com.kangyonggan.extra.core.handle.ConsoleLogHandle
+log.handle=com.kangyonggan.extra.test.Log4j2LogHandle
+
