--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.kangyonggan</groupId>
     <artifactId>extra</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <modules>
         <module>extra-core</module>
@@ -37,7 +37,7 @@
 
     <properties>
         <!--Project-->
-        <project.build.version>1.0-SNAPSHOT</project.build.version>
+        <project.build.version>1.0</project.build.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--Plugins-->
