--- a/extra-test/src/main/resources/extra.properties
+++ b/extra-test/src/main/resources/extra.properties
@@ -4,9 +4,12 @@ cache.prefix=extra:
 # default value is Long.MAX_VALUE
 cache.expire=1800000
 
-# default is com.kangyonggan.extra.core.handle.MemoryCacheHandle
+# default is com.kangyonggan.extra.core.handle.impl.MemoryCacheHandle
 cache.handle=com.kangyonggan.extra.test.RedisCacheHandle
 
-# default is com.kangyonggan.extra.core.handle.ConsoleLogHandle
+# default is com.kangyonggan.extra.core.handle.impl.ConsoleLogHandle
 log.handle=com.kangyonggan.extra.test.Log4j2LogHandle
+
+# default is com.kangyonggan.extra.core.handle.impl.MemoryLimitCountHandle
+#limit.count.handle=com.kangyonggan.extra.test.RedisLimitCountHandle
 
