--- a/extra-test/src/main/resources/extra.properties
+++ b/extra-test/src/main/resources/extra.properties
@@ -1,7 +1,7 @@
 # default value is ""
 cache.prefix=extra:
 
-# default value is Long.MAX_VALUE
+# default value is 10 years
 cache.expire=1800000
 
 # default is com.kangyonggan.extra.core.handle.impl.MemoryCacheHandle
@@ -10,6 +10,15 @@ cache.handle=com.kangyonggan.extra.test.RedisCacheHandle
 # default is com.kangyonggan.extra.core.handle.impl.ConsoleLogHandle
 log.handle=com.kangyonggan.extra.test.Log4j2LogHandle
 
-# default is com.kangyonggan.extra.core.handle.impl.MemoryLimitCountHandle
-#limit.count.handle=com.kangyonggan.extra.test.RedisLimitCountHandle
+# default is false
+count.interrupt=false
+
+# default is com.kangyonggan.extra.core.handle.impl.MemoryCountHandle
+#count.handle=com.kangyonggan.extra.test.RedisCountHandle
+
+# default is false
+frequency.interrupt=false
+
+# default is com.kangyonggan.extra.core.handle.impl.MemoryFrequencyHandle
+#frequency.handle=com.kangyonggan.extra.test.RedisFrequencyHandle
 
