--- a/extra-test/src/main/resources/extra.properties
+++ b/extra-test/src/main/resources/extra.properties
@@ -7,6 +7,9 @@ cache.expire=1800000
 # default is com.kangyonggan.extra.core.handle.impl.MemoryCacheHandle
 cache.handle=com.kangyonggan.extra.test.RedisCacheHandle
 
+# default is true
+cache.open=false
+
 # default is com.kangyonggan.extra.core.handle.impl.ConsoleLogHandle
 #log.handle=com.kangyonggan.extra.test.Log4j2LogHandle
 
