--- a/extra-test/src/main/resources/extra.properties
+++ b/extra-test/src/main/resources/extra.properties
@@ -31,3 +31,6 @@ valid.interrupt=false
 # default is com.kangyonggan.extra.core.handle.impl.ConsoleValidHandle
 #valid.handle=com.kangyonggan.extra.test.Log4j2ValidHandle
 
+monitor.app=blog
+
+
